--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>  <!-- add this line -->
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="flutter_diffrent_ui_part_3"
         android:name="${applicationName}"
