--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   quickalert: ^1.0.1
   external_app_launcher: ^3.1.0
+  intl: ^0.18.0
+  grouped_list: ^5.1.2
+  local_auth: ^2.1.6
+  audioplayers: ^4.1.0
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +66,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
+    - sounds/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
